# arr-suite-mcp-server

./: .env.example  .gitignore  CLAUDE_CODE_SETUP.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  LICENSE  MCP_REGISTRY.md  PLEX_ADDED_SUMMARY.md  PLEX_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  pyproject.toml  setup.sh
arr_suite_mcp/: __init__.py  config.py  server.py
arr_suite_mcp/clients/: __init__.py  base.py  bazarr.py  overseerr.py  plex.py  prowlarr.py  radarr.py  sonarr.py
arr_suite_mcp/routers/: __init__.py  intent_router.py
arr_suite_mcp/utils/: __init__.py  db_manager.py
tests/: __init__.py  test_intent_router.py
