[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arr-suite-mcp"
version = "1.0.0"
description = "Comprehensive MCP server for the arr suite (Sonarr, Radarr, Prowlarr, Bazarr, Overseerr)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Arr Suite MCP Contributors" }
]
keywords = ["mcp", "sonarr", "radarr", "prowlarr", "bazarr", "overseerr", "media", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
arr-suite-mcp = "arr_suite_mcp.server:main"

[project.urls]
Homepage = "https://github.com/shaktech786/arr-suite-mcp-server"
Documentation = "https://github.com/shaktech786/arr-suite-mcp-server#readme"
Repository = "https://github.com/shaktech786/arr-suite-mcp-server"
Issues = "https://github.com/shaktech786/arr-suite-mcp-server/issues"

[tool.setuptools]
packages = ["arr_suite_mcp"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
